--- a/pub/System/TinyMCEPlugin/tinymce/jscripts/tiny_mce/plugins/foswikibuttons/css/popup_src.css
+++ b/pub/System/TinyMCEPlugin/tinymce/jscripts/tiny_mce/plugins/foswikibuttons/css/popup_src.css
@@ -7,7 +7,7 @@ td.colours {
   padding: 0;
 }
 
-td.twikicolours {
+td.foswikicolours {
   border-width : 2px;
   border-style : solid;
   border-color : red;
